--- a/index.html
+++ b/index.html
@@ -44,13 +44,32 @@
             </div>
             <picture>
                 <source media="(min-width: 1000px )" srcset="images/logonexus.png">
-                <img src="images/logonexus.png" alt="logo da nexux">
+                <img src="" alt="logo da nexux">
             </picture>
+        </section>
+        <section class="numeroros">
+            <div class="estatisticas">
+                <section>
+                    <img src="images/icones/numeros/estrela.svg" alt="">
+                    <h3 class="titles">Nota 4.9</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing.</p>
+                </section>
+                <section>
+                    <img src="images/icones/numeros/tela_video.svg" alt="">      
+                    <h3 class="titles">+1Mil aulas</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing.</p>
+                </section>
+                <section>
+                    <img src="images/icones/numeros/usuarios.svg" alt="">                  
+                    <h3 class="titles">+1.500 alunos</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing.</p>
+                </section>
+            </div>
         </section>
         <section id="quemSomos" class="container">
             <picture>
                 <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
-                <img src="images/imagensSobrepostas.png" alt="">
+                <img src="" alt="imagem sobreposta">
             </picture>
             <div>
                 <h2>Quem <span>somos?</span></h2>
@@ -144,11 +163,6 @@
                 </div>
             </section>
         </div>
-        <section class="parceiros">
-            <div class="logotipos">
-
-            </div>
-        </section>
         <section class=" container linguagens">
             <p>Linguagens usadas</p>
             <h2>Aqui você aprende bem mais</h2>
