--- a/index.html
+++ b/index.html
@@ -19,19 +19,24 @@
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="professores.html">Professores</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login.html" class="icone loginIn"><span>Entrar</span><svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15 3.5H19C19.5304 3.5 20.0391 3.71071 20.4142 4.08579C20.7893 4.46086 21 4.96957 21 5.5V19.5C21 20.0304 20.7893 20.5391 20.4142 20.9142C20.0391 21.2893 19.5304 21.5 19 21.5H15" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M10 17.5L15 12.5L10 7.5" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M15 12.5H3" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                <li><a href="login.html" class="icone loginIn"><span>Entrar</span><svg width="24" height="25"
+                            viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15 3.5H19C19.5304 3.5 20.0391 3.71071 20.4142 4.08579C20.7893 4.46086 21 4.96957 21 5.5V19.5C21 20.0304 20.7893 20.5391 20.4142 20.9142C20.0391 21.2893 19.5304 21.5 19 21.5H15"
+                                stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M10 17.5L15 12.5L10 7.5" stroke="#18181B" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M15 12.5H3" stroke="#18181B" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="bemVindo" class="container">
-            <div>
+        <section data-aos="zoom-in-down" id="bemVindo" class="container" >
+            <div >   
                 <h2>Bem-vindo a N<span>exus!</span></h2>
                 <div class="lineBottom"></div>
                 <p>
@@ -52,17 +57,20 @@
                 <section>
                     <img src="images/icones/numeros/estrela.svg" alt="">
                     <h3 class="titles">Nota 4.9</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
                 </section>
                 <section>
-                    <img src="images/icones/numeros/tela_video.svg" alt="">      
+                    <img src="images/icones/numeros/tela_video.svg" alt="">
                     <h3 class="titles">+1Mil aulas</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
                 </section>
                 <section>
-                    <img src="images/icones/numeros/usuarios.svg" alt="">                  
+                    <img src="images/icones/numeros/usuarios.svg" alt="">
                     <h3 class="titles">+1.500 alunos</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
                 </section>
             </div>
         </section>
@@ -165,7 +173,7 @@
         </div>
         <section class=" container linguagens">
             <p>Linguagens usadas</p>
-            <h2>Aqui você aprende bem mais</h2>
+            <h2>Aqui você aprende</h2>
             <section class="linguagem">
                 <img src="images/icones/index/java.svg" alt="Logo da linguagem de programação java na cor branca">
                 <div>
@@ -183,7 +191,8 @@
                 </div>
             </section>
             <section class="linguagem">
-                <img src="images/icones/index/front.svg" alt="Logo da linguagem de programação JavaScript na cor branca">
+                <img src="images/icones/index/front.svg"
+                    alt="Logo da linguagem de programação JavaScript na cor branca">
                 <div>
                     <h3>HTML + CSS + JS</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -249,7 +258,8 @@
                 </ul>
                 <p>© 2024 Nexus • Todos os direitos reservados</p>
             </section>
-        </div>
+        </div>       
     </footer>
+</body>
 
 </html>
