--- a/contato.html
+++ b/contato.html
@@ -37,20 +37,30 @@
                 <ul>
                     <li>
                         <a href="#" class="media">
-                            <img src="images/icones/footer/instagram.svg" alt="icone do instagram">
+                            <svg width="32" height="32" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M24.2395 10.0208H14.7603C12.1427 10.0208 10.0208 12.1427 10.0208 14.7603V24.2395C10.0208 26.8571 12.1427 28.9791 14.7603 28.9791H24.2395C26.8571 28.9791 28.9791 26.8571 28.9791 24.2395V14.7603C28.9791 12.1427 26.8571 10.0208 24.2395 10.0208Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M23.2916 18.9027C23.4086 19.6916 23.2738 20.4973 22.9065 21.2052C22.5392 21.9131 21.958 22.4872 21.2456 22.8458C20.5333 23.2043 19.726 23.3291 18.9386 23.2024C18.1512 23.0757 17.4238 22.704 16.8598 22.14C16.2959 21.5761 15.9241 20.8487 15.7974 20.0613C15.6707 19.2739 15.7955 18.4666 16.1541 17.7542C16.5126 17.0418 17.0867 16.4607 17.7946 16.0933C18.5025 15.726 19.3082 15.5913 20.0971 15.7083C20.9018 15.8276 21.6468 16.2026 22.2221 16.7778C22.7973 17.353 23.1723 18.098 23.2916 18.9027Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M24.7136 14.2864H24.7237" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <circle cx="19.5" cy="19.5" r="19" stroke="white" stroke-opacity="0.43"/>
+                            </svg>  
                         </a>
                     </li>
                     <li>
                         <a href="#" class="media">
-                            <img src="images/icones/footer/facebook.svg" alt="icone do facebook">
+                            <svg width="32" height="32" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="19.5" cy="19.5" r="19" stroke="white" stroke-opacity="0.43"/>
+                                <path d="M25 10H22C20.6739 10 19.4021 10.5268 18.4645 11.4645C17.5268 12.4021 17 13.6739 17 15V18H14V22H17V30H21V22H24L25 18H21V15C21 14.7348 21.1054 14.4804 21.2929 14.2929C21.4804 14.1054 21.7348 14 22 14H25V10Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>       
                         </a>
                     </li>
                     <li>
                         <a href="#" class="media">
-                            <img src="images/icones/footer/twitter.svg" alt="icone do twitter">
+                            <svg width="32" height="32" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="19.5" cy="19.5" r="19" stroke="white" stroke-opacity="0.43"/>
+                                <path d="M26.1125 9.07812H29.6401L21.9351 17.9073L31 29.9219H23.9031L18.3443 22.6338L11.9833 29.9219H8.45425L16.6954 20.4775L8 9.07812H15.2781L20.3021 15.7381L26.1125 9.07812ZM24.8762 27.8059H26.8313L14.2143 11.0834H12.1184L24.8762 27.8059Z" fill="white"/>
+                            </svg>
                         </a>
                     </li>
-
                 </ul>
             </section>
             <section>
@@ -79,7 +89,7 @@
                 </ul>
                 <p>© 2024 Nexus • Todos os direitos reservados</p>
             </section>
-        </div>
+        </div>       
     </footer>
 </body>
 
