--- a/index.html
+++ b/index.html
@@ -75,29 +75,29 @@
             </div>
         </section>
         <section id="quemSomos" class="container">
-            <picture>
+            <picture class="intro">
                 <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
                 <img src="" alt="imagem sobreposta">
             </picture>
             <div>
-                <h2>Quem <span>somos?</span></h2>
-                <div class="lineBottom"></div>
-                <p>
+                <h2 class="intro">Quem <span>somos?</span></h2>
+                <div class="lineBottom intro"></div>
+                <p class="intro">
                     A Nexus é uma empresa especializada em capacitação para desenvolvedores de software, dedicada a
                     promover o crescimento profissional através de educação de ponta. Oferecemos uma variedade de cursos
                     e treinamentos projetados para atender às necessidades de desenvolvedores em todos os níveis, desde
                     iniciantes até especialistas.
                 </p>
-                <p>
+                <p class="intro">
                     Nosso compromisso é com a excelência na formação técnica e no desenvolvimento contínuo, utilizando
                     recursos atualizados e abordagens práticas para garantir que nossos alunos estejam sempre à frente
                     no setor. Na Nexus, acreditamos que investir no aprendizado é essencial para enfrentar os desafios
                     do mercado tecnológico e alcançar o sucesso na carreira de desenvolvimento de software.
                 </p>
-                <a href="#" class="button">Primeiro Botão</a>
+                <a href="#" class="button intro">Primeiro Botão</a>
             </div>
         </section>
-        <div id="cardsCursos" class="container">
+        <div id="cardsCursos" class="container intro">
             <section class="card card1">
                 <div class="imagem curso1"></div>
                 <p>INICIANTE</p>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
             </section>
-            <section class="card card4">
+            <section class="card card4 ">
                 <div class="imagem curso4"></div>
                 <p>INTERMEDIÁRIO</p>
                 <h3>Nodejs</h3>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </section>
-            <section class="card card5">
+            <section class="card card5 ">
                 <div class="imagem curso5"></div>
                 <p>AVANÇADO <img src="images/icones/index/icone_coroa.svg" alt="icone de coroa dourada"></p>
                 <h3>React.js</h3>
@@ -172,9 +172,9 @@
             </section>
         </div>
         <section class=" container linguagens">
-            <p>Linguagens usadas</p>
-            <h2>Aqui você aprende</h2>
-            <section class="linguagem">
+            <p class="intro">Linguagens usadas</p>
+            <h2 class="intro">Aqui você aprende</h2>
+            <section class="linguagem intro">
                 <img src="images/icones/index/java.svg" alt="Logo da linguagem de programação java na cor branca">
                 <div>
                     <h3>Java</h3>
@@ -182,7 +182,7 @@
                         dummy text of the printing.</p>
                 </div>
             </section>
-            <section class="linguagem">
+            <section class="linguagem intro">
                 <img src="images/icones/index/reactjs.svg" alt="Logo do framework react.js na cor branca">
                 <div>
                     <h3>React.js</h3>
@@ -190,7 +190,7 @@
                         dummy text of the printing.</p>
                 </div>
             </section>
-            <section class="linguagem">
+            <section class="linguagem intro">
                 <img src="images/icones/index/front.svg"
                     alt="Logo da linguagem de programação JavaScript na cor branca">
                 <div>
@@ -199,7 +199,7 @@
                         dummy text of the printing.</p>
                 </div>
             </section>
-            <section class="linguagem">
+            <section class="linguagem intro">
                 <img src="images/icones/index/python.svg" alt="Logo da linguagem de programação python na cor branca">
                 <div>
                     <h3>Python</h3>
