--- a/professores.html
+++ b/professores.html
@@ -32,7 +32,7 @@
     </header>   
     <main>
         <section class="perfil" id="prof1">
-            <img src="images/prof1.png" alt="">
+            <img src="images/professores/prof1.png" alt="">
             <h2>Nome Sobrenome</h2>
             <span>Eng. de computação</span>
             <p>
@@ -70,7 +70,7 @@
             </ul>
         </section>
         <section class="perfil" id="prof2">
-            <img src="images/prof2.png" alt="">
+            <img src="images/professores/prof2.png" alt="">
             <h2>Nome Sobrenome</h2>
             <span>Eng. de computação</span>
             <p>
@@ -108,7 +108,7 @@
             </ul>
         </section>
         <section class="perfil" id="prof3">
-            <img src="images/prof3.png" alt="">
+            <img src="images/professores/prof3.png" alt="">
             <h2>Nome Sobrenome</h2>
             <span>Eng. de computação</span>
             <p>
@@ -146,7 +146,7 @@
             </ul>
         </section>
         <section class="perfil" id="prof4">
-            <img src="images/prof4.png" alt="">
+            <img src="images/professores/prof4.png" alt="">
             <h2>Nome Sobrenome</h2>
             <span>Eng. de computação</span>
             <p>
@@ -184,7 +184,7 @@
             </ul>
         </section>
         <section class="perfil" id="prof5">
-            <img src="images/prof5.png" alt="">
+            <img src="images/professores/prof5.png" alt="">
             <h2>Nome Sobrenome</h2>
             <span>Eng. de computação</span>
             <p>
@@ -222,7 +222,7 @@
             </ul>
         </section>
         <section class="perfil" id="prof6">
-            <img src="images/prof6.png" alt="">
+            <img src="images/professores/prof6.png" alt="">
             <h2>Nome Sobrenome</h2>
             <span>Eng. de computação</span>
             <p>
