--- a/teste.html
+++ b/teste.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus</title>
-    <link rel="shortcut icon" href="./images/icones/logo.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/index.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="style/main.css">
+    <style>
+        main {
+            margin-top: 200px;
+        }
+
+        .imagem {
+            width: 384px;
+            height: 150px;
+            border-top: 1px solid var(--gray-500);
+            border-left: 1px solid var(--gray-500);
+            border-right: 1px solid var(--gray-500);
+            border-radius: 6px 6px 0 0;
+            background-color: var(--gray-500);
+        }
+
+        section>h3 {
+            padding: 5px 13px;
+        }
+
+        .card>p {
+            color: var(--green-100);
+            padding: 12px 13px 0;
+            font-size: 14px;
+            font-weight: 300;
+        }
+
+        .perfilProf {
+            gap: 8px;
+            display: flex;
+            padding: 13px;
+            align-items: center;
+        }
+
+        .perfilProf p {
+            padding: 3px;
+            font-size: 14px;
+        }
+
+        .perfilProf .atuacao {
+            color: var(--gray-100);
+            font-weight: 300;
+        }
+
+        .perfilProf img {
+            width: 40px;
+            height: 40px;
+            border: 1px solid var(--green-100);
+            border-radius: 50%;
+            background-color: var(--gray-500);
+        }
+
+
+    </style>
 </head>
 
 <body>
@@ -35,85 +87,8 @@
         </nav>
     </header>
     <main>
-        <section data-aos="zoom-in-down" id="bemVindo" class="container">
-            <div>
-                <h2>Bem-vindo a N<span>exus!</span></h2>
-                <div class="lineBottom"></div>
-                <p>
-                    Bem-vindo ao Nexus! Estamos empolgados em ter você aqui. No Nexus, oferecemos aulas de alta
-                    qualidade para desenvolvedores de software, ajudando você a aprimorar suas habilidades e alcançar
-                    seus objetivos na área de tecnologia. Explore nossos cursos e descubra como podemos apoiar sua
-                    jornada no desenvolvimento de software!
-                </p>
-                <a href="#" class="button">Primeiro Botão</a>
-            </div>
-            <picture>
-                <source media="(min-width: 1000px )" srcset="images/logonexus.png">
-                <img src="" alt="logo da nexux">
-            </picture>
-        </section>
-        <section class="numeroros">
-            <div class="estatisticas">
-                <section>
-                    <img src="images/icones/index/estrela.svg" alt="">
-                    <h3 class="titles">Nota 4.9</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </section>
-                <section>
-                    <img src="images/icones/index/tela_video.svg" alt="">
-                    <h3 class="titles">+1Mil aulas</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </section>
-                <section>
-                    <img src="images/icones/index/usuarios.svg" alt="">
-                    <h3 class="titles">+1.500 alunos</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </section>
-            </div>
-        </section>
-        <section id="quemSomos" class="container">
-            <picture class="intro">
-                <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
-                <img src="" alt="imagem sobreposta">
-            </picture>
-            <div>
-                <h2 class="intro">Quem <span>somos?</span></h2>
-                <div class="lineBottom intro"></div>
-                <p class="intro">
-                    A Nexus é uma empresa especializada em capacitação para desenvolvedores de software, dedicada a
-                    promover o crescimento profissional através de educação de ponta. Oferecemos uma variedade de cursos
-                    e treinamentos projetados para atender às necessidades de desenvolvedores em todos os níveis, desde
-                    iniciantes até especialistas.
-                </p>
-                <p class="intro">
-                    Nosso compromisso é com a excelência na formação técnica e no desenvolvimento contínuo, utilizando
-                    recursos atualizados e abordagens práticas para garantir que nossos alunos estejam sempre à frente
-                    no setor. Na Nexus, acreditamos que investir no aprendizado é essencial para enfrentar os desafios
-                    do mercado tecnológico e alcançar o sucesso na carreira de desenvolvimento de software.
-                </p>
-                <a href="#" class="button intro">Primeiro Botão</a>
-            </div>
-        </section>
-
-        <swiper-container class="mySwiper intro" id="cardsCursos" pagination="true" pagination-clickable="true"
-            space-between="30" slides-per-view="3">
-            <swiper-slide >
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
-                    <div class="perfilProf">
-                        <img src="" alt="">
-                        <div>
-                            <p class="name">Nome Sobrenome</p>
-                            <p class="atuacao">Área de atuação</p>
-                        </div>
-                    </div>
-                </section>
-            </swiper-slide>
+        <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" slides-per-view="3"
+            space-between="30" free-mode="true">
             <swiper-slide>
                 <section class="card card1">
                     <div class="imagem curso1"></div>
@@ -129,10 +104,10 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
+                <section class="card card2">
+                    <div class="imagem curso2"></div>
                     <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                    <h3>JavaScript</h3>
                     <div class="perfilProf">
                         <img src="" alt="">
                         <div>
@@ -143,10 +118,10 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                <section class="card card3">
+                    <div class="imagem curso3"></div>
+                    <p>AVANÇADO <img src="images/icones/index/icone_coroa.svg" alt="icone de coroa dourada"></p>
+                    <h3>Devops</h3>
                     <div class="perfilProf">
                         <img src="" alt="">
                         <div>
@@ -157,10 +132,10 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                <section class="card card4 ">
+                    <div class="imagem curso4"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Nodejs</h3>
                     <div class="perfilProf">
                         <img src="" alt="">
                         <div>
@@ -171,57 +146,38 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1 ">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
-                    <div class="perfilProf">
-                        <img src="" alt="">
-                        <div>
-                            <p class="name">Nome Sobrenome</p>
-                            <p class="atuacao">Área de atuação</p>
-                        </div>
-                    </div>
-                </section>
-            </swiper-slide>
-        </swiper-container>
-        <section class=" container linguagens">
-            <p class="intro">Linguagens usadas</p>
-            <h2 class="intro">Aqui você aprende</h2>
-            <section class="linguagem intro">
-                <img src="images/icones/index/java.svg" alt="Logo da linguagem de programação java na cor branca">
-                <div>
-                    <h3>Java</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </div>
-            </section>
-            <section class="linguagem intro">
-                <img src="images/icones/index/reactjs.svg" alt="Logo do framework react.js na cor branca">
-                <div>
+                <section class="card card5 ">
+                    <div class="imagem curso5"></div>
+                    <p>AVANÇADO <img src="images/icones/index/icone_coroa.svg" alt="icone de coroa dourada"></p>
                     <h3>React.js</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </div>
-            </section>
-            <section class="linguagem intro">
-                <img src="images/icones/index/front.svg"
-                    alt="Logo da linguagem de programação JavaScript na cor branca">
-                <div>
-                    <h3>HTML + CSS + JS</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </div>
-            </section>
-            <section class="linguagem intro">
-                <img src="images/icones/index/python.svg" alt="Logo da linguagem de programação python na cor branca">
-                <div>
-                    <h3>Python</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
-                </div>
-            </section>
-        </section>
+                    <div class="perfilProf">
+                        <img src="" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card6 ">
+                    <div class="imagem curso6"></div>
+                    <p>AVANÇADO <img src="images/icones/index/icone_coroa.svg" alt="icone de coroa dourada"></p>
+                    <h3>React.js</h3>
+                    <div class="perfilProf">
+                        <img src="" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+
+
+        </swiper-container>
+
+
     </main>
     <footer>
         <div id="container_footer">
@@ -296,7 +252,8 @@
             </section>
         </div>
     </footer>
-    <script src="script/swiper-element-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+
 </body>
 
 </html>
