--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
                 </li>
             </ul>
         </nav>
+        <button onclick="menu()" id="sanduiche"><img class="icon" src="images/icones/menu/Icone_sanduiche.svg" alt=""></button>
+        <nav id="" class="menu-mobile">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="professores.html">Professores</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li id="entrar"><a href="login.html" class="loginIn"><span>Entrar<svg width="24" height="25"
+                            viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15 3.5H19C19.5304 3.5 20.0391 3.71071 20.4142 4.08579C20.7893 4.46086 21 4.96957 21 5.5V19.5C21 20.0304 20.7893 20.5391 20.4142 20.9142C20.0391 21.2893 19.5304 21.5 19 21.5H15"
+                                stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M10 17.5L15 12.5L10 7.5" stroke="#18181B" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M15 12.5H3" stroke="#18181B" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"/>
+                        </svg>
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        
     </header>
     <main>
         <section data-aos="zoom-in-down" id="bemVindo" class="container">
@@ -98,9 +121,9 @@
             </div>
         </section>
 
-        <swiper-container class="mySwiper intro" id="cardsCursos" pagination="true" pagination-clickable="true"
+        <swiper-container class="mySwiper intro to-hide" id="cardsCursos" pagination="true" pagination-clickable="true"
             space-between="30" slides-per-view="3">
-            <swiper-slide >
+            <swiper-slide>
                 <section class="card card1">
                     <div class="imagem curso1"></div>
                     <p>INICIANTE</p>
@@ -185,6 +208,9 @@
                 </section>
             </swiper-slide>
         </swiper-container>
+
+        
+
         <section class=" container linguagens">
             <p class="intro">Linguagens usadas</p>
             <h2 class="intro">Aqui você aprende</h2>
@@ -297,6 +323,7 @@
         </div>
     </footer>
     <script src="script/swiper-element-bundle.min.js"></script>
+    <script src="script/menuMobile.js"></script>
 </body>
 
 </html>
